# pymts

./: .editorconfig  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  tests.yml
cli/: __init__.py  app.py
configs/examples/: kuramoto_grid.yaml
docs/: SHIPPING.md  changelog.md  faq.md  index.md  quickstart.md  troubleshooting.md
docs/assets/styles/: extra.css
docs/developer/: adding-models.md  architecture.md  contributing.md
docs/how-to/: recipes.md
docs/integrations/: pyspi_hctsa.md  sklearn.md  statsmodels.md  tsfresh.md
docs/plots/: plots.md
docs/reference/: api.md  cli.md
docs/tutorials/: 01_kuramoto_and_friends.ipynb  02_cli_and_yaml.ipynb
pymts/: __init__.py  __main__.py  accessors.py  adapters.py  core.py  io.py  plotting.py  schemas.py  utils.py
pymts/models/: __init__.py  ar.py  base.py  brownian.py  cml.py  kuramoto.py  noise.py  ou.py  var.py
tests/: test_accessors.py  test_cli.py  test_cli_grid.py  test_hash_slug.py  test_imports.py  test_io.py  test_models_ar_var.py  test_models_brownian.py  test_models_cml.py  test_models_kuramoto.py  test_models_noise.py  test_models_ou.py  test_plotting_smoke.py  test_rng.py  test_zscore.py
